--- a/style/login.css
+++ b/style/login.css
@@ -1,47 +1,53 @@
-header{
-    text-transform: uppercase;
-    text-align: center;
-}
-
-img{
-    height: 150px;
-    width: 150px;
-}
-
 body{
-    background-color: #E38634;
+    background-color: rgb(34, 34, 58);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    border: 0;
+    margin: 0;
+    padding: 0;
 }
 
-div{
-    margin: 15px;
-}
-
-button{
-    border-radius: 5px;
-    background-color: #E38634;
-    color: aliceblue;
-    margin-left: 200px;
-}
 
 .containner{
     background-color: aliceblue;
-    color: #E38634;
-    margin: auto;
-    border-radius: 50px;
-    padding: 16px;
-    width: 500px;
-    height: 400px;
-    font-weight: bold;
+    color: #4b4948f8;
+    float: right;
+    width: 800px;
+    height: 645px;
 }
 
-.alinhamento{
-    text-align: center;
-}
-
-.caixas{
-    margin-left: 150px;
+div #border{
+    border-color: grey;
+    border-radius: 5px;
+    margin: 80px;
+    border: 100px;
+    width: 50%;
+    height: 40%;
+    border: 200px;
+    text-align: left;
 }
 
 .centralizar {
-    margin-left: 220px;
+    margin-left: 1rem;
+    width: 350px;
+    height: 30px;
+}
+
+.paragrafo{
+    flex-direction: row-reverse;
+    display: flex;
+    margin-right: 10px;
+
+}
+
+.button{
+    border-radius: 5px;
+    background-color: rgb(92, 190, 108);
+    color: aliceblue;
+    margin: 10px;
+    margin-left: 1rem;
+    cursor: pointer;
+    text-align: center;
+    width: 360px;
+    height: 30px;
 }
